--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
     <title>myStash!</title>
   </head>
   <body>
@@ -41,6 +41,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <script src="//use.edgefonts.net/damion;cabin.js"></script>
+  <script src="//use.edgefonts.net/damion.js"></script>
   </body>
 </html>
