--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="myStash is an app to keep track of your craft items, including sewing patterns, fabric, yarn, and notions."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
